Set z-index to 0 so that React Select falls over buttons correctly

--- a/static/styles.css
+++ b/static/styles.css
@@ -93,6 +93,13 @@ ol {
   outline: none;
 }
 
+/**
+ * Required for React-Select boxes thay may expand over the buttons.
+ */
+.btn-group > .btn.active {
+  z-index: 0;
+}
+
 .center {
   text-align: center;
 }
